# micro-guitar-tuner

./: .editorconfig  .gitmodules  README.md  gen_filter_coeffs.m
core/: 2d_bit_array.c  Makefile  adc.c  compiler_vars.mk  dsp.c  dsp_params.mk  filter_coeffs.c  gen_filter_coeffs.m  note.c  plot_filter_coeffs.m  print_filter_coeffs.m
include/: 2d_bit_array.h  adc.h  dsp.h  note.h
mcu/: CMakeLists.txt  Makefile  debug.c  debug.h  font.c  font.h  guitar_tuner.c  libcore.mk  power.c  power.h  ssd1306.c  ssd1306.h  stm32f411ceu6.ld
test/: Makefile  README.md  assert.c  assert.h  assert_tests.c  dsp_indirect.c  dsp_indirect.h  file_source.c  file_source.h  plot.c
test-data/: A2.raw  B3.raw  D3.raw  E2.raw  E4.raw  G3.raw  README.md
test/data/note/: A#1.raw  A#2.raw  A#3.raw  A1.raw  A2.raw  A3.raw  B1.raw  B2.raw  B3.raw  C#2.raw  C#3.raw  C#4.raw  C2.raw  C3.raw  C4.raw  D#2.raw  D#3.raw  D#4.raw  D2.raw  D3.raw  D4.raw  E2.raw  E3.raw  E4.raw  F#2.raw  F#3.raw  F#4.raw  F2.raw  F3.raw  F4.raw  G#2.raw  G#3.raw  G2.raw  G3.raw  README.md
test/data/sine/: 82.0.raw  82.1.raw  82.2.raw  82.3.raw  82.4.raw  82.49.raw  82.5.raw  82.51.raw  82.6.raw  82.7.raw  82.8.raw  82.9.raw  83.0.raw  83.4.raw  83.8.raw  90.5.raw  91.0.raw  91.5.raw  92.0.raw  92.5.raw  93.0.raw  93.5.raw  94.0.raw  94.5.raw  97.7.raw  97.8.raw  97.9.raw  98.1.raw  98.2.raw  98.3.raw  98.4.raw  98.5.raw  98.6.raw  98.7.raw  98.raw  README.md
test/data/sine/anti-alias/: 1000.raw  1400.raw  1800.raw  200.raw  2200.raw  2600.raw  3000.raw  3400.raw  3800.raw  600.raw
test/data/sine/freq-to-bin-index/: 97.7.raw  97.8.raw  98.2.raw  98.3.raw  98.5.raw  98.6.raw  98.7.raw  98.raw
test/note-recordings/: B3.raw  E4.raw
